# build-webos

./: Makefile.in  README.md  configure  configure.ac  mcf
build-templates/: Makefile.in  bblayers-conf.in  bitbake-rc.in  local-conf.in  mcf-status.in
scripts/: prerequisites.sh  tag_bitbake.sh  tag_oe.sh
